<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PaidCheckFragment">

    <FrameLayout
        android:id="@+id/superior"
        style="?barraTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:fontFamily="@font/helvetica_stand"
            android:gravity="center"
            android:text="@string/dev_cuba"
            android:textColor="?colorNegro"
            android:textSize="@dimen/_25ssp" />

        <ImageView
            style="?logoImagen"
            android:layout_width="@dimen/_155sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center|start"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:contentDescription="@string/imagen"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImg"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:contentDescription="@string/imagen"
                android:src="@drawable/avatar"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/ajustes_paid"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:contentDescription="@string/imagen"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_ajustes"
                android:visibility="visible"
                app:tint="?colorNegro" />

        </LinearLayout>

    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_18sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/helvetica_stand"
                    android:gravity="center"
                    android:text="@string/aplicaci_n_de_pago"
                    android:textColor="?colorNegro"
                    android:textSize="@dimen/_20ssp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="?colorNegro" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_11sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_11sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/helvetica_stand"
                    android:text="@string/app_pago_fail"
                    android:textColor="?colorNegro"
                    android:textSize="@dimen/_15ssp" />

                <com.baoyachi.stepview.VerticalStepView
                    android:id="@+id/step_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_125sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_5sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/helvetica_stand"
                    android:gravity="start"
                    android:text="@string/muchas_gracias"
                    android:textColor="?colorNegro"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:fontFamily="@font/helvetica_stand"
                    android:gravity="end"
                    android:text="@string/muchas_gracias2"
                    android:textColor="?colorNegro"
                    android:textSize="@dimen/_15ssp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>