<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/superior"
        style="?barraTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_10sdp">

        <TextView
            android:id="@+id/logoHome"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:fontFamily="@font/helvetica_stand"
            android:gravity="center"
            android:text="@string/dev_cuba"
            android:textColor="?colorNegro"
            android:textSize="@dimen/_25ssp" />

        <ImageView
            style="?logoImagen"
            android:layout_width="@dimen/_155sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center|start"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:contentDescription="@string/imagen"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImg"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:contentDescription="@string/imagen"
                android:src="@drawable/avatar"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/ajustes"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:contentDescription="@string/imagen"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_ajustes"
                app:tint="?colorNegro" />

        </LinearLayout>

    </FrameLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/view_mis_ganancias"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardBackgroundColor="?colorTitleBar"
                        app:cardCornerRadius="@dimen/_15sdp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/_11sdp"
                            android:layout_marginRight="@dimen/_11sdp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_45sdp"
                                android:layout_height="@dimen/_45sdp"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_6sdp"
                                android:contentDescription="@string/imagen"
                                android:src="@drawable/ic_money"
                                app:tint="?colorNegro" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="@dimen/_5sdp"
                                android:text="@string/mis_ganancias"
                                android:textColor="?colorNegro"
                                android:textSize="@dimen/_11ssp" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/mi_cuenta"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="?colorTitleBar"
                        app:cardCornerRadius="@dimen/_15sdp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/_11sdp"
                            android:layout_marginRight="@dimen/_11sdp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_45sdp"
                                android:layout_height="@dimen/_45sdp"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_6sdp"
                                android:contentDescription="@string/imagen"
                                android:src="@drawable/ic_account"
                                app:tint="?colorNegro" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="@dimen/_5sdp"
                                android:text="@string/mi_cuenta"
                                android:textColor="?colorNegro"
                                android:textSize="@dimen/_11ssp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:text="@string/mis_aplicaciones"
                    android:textColor="?colorNegro"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?colorNegro" />

            </LinearLayout>

            <com.kennyc.view.MultiStateView
                android:id="@+id/multiStateView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:msv_emptyView="@layout/empty_view_app"
                app:msv_errorView="@layout/error_view_app"
                app:msv_loadingView="@layout/loading_view_app"
                app:msv_viewState="loading">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.kennyc.view.MultiStateView>

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>
